# bouncing_balls

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bitbucket-pipelines.yml  environment.yml  example.py  generate_data.py  main.cpp  requirements.txt  setup.py  simple_bouncing_balls_generator.py  wrapper_entrypoint.cpp
bouncing_balls/: __init__.py  bouncing_balls.py  environment_simulator.py  generate_data.py  render.py  utility_functions.py
bouncing_balls/bouncing_balls_cpp/: CMakeLists.txt  bouncing_balls_cpp.cpp  first_python_wrapper.cpp
bouncing_balls/bouncing_balls_cpp/include/: bouncing_balls.hpp  npy_writer.hpp  simulator.hpp
bouncing_balls/bouncing_balls_cpp/src/: simulator.cpp
bouncing_balls/cpp/: CMakeLists.txt  main.cpp
bouncing_balls/cpp/include/: b2Iterator.hpp  bouncing_balls.hpp  common_types.hpp  simulator.hpp  video_renderer.hpp
bouncing_balls/cpp/src/: bouncing_balls.cpp  simulator.cpp  video_renderer.cpp
include/: b2Iterator.hpp  common_types.hpp
src/: bouncing_balls.cpp  common_types.cpp  npy_writer.cpp  video_renderer.cpp
